third_party/move/move-compiler-v2/tests/checking/inlining/lambda5.exp

Diagnostics:
error: Functions may not return function-typed values, but function `M::macro_result_lambda_not_allowed` return type is `|u64|`:
   ┌─ tests/checking/inlining/lambda5.move:86:23
   │
86 │     public inline fun macro_result_lambda_not_allowed(): |u64| {  // expected lambda not allowed
   │                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
